# autolon

./: .gitignore  .todo.md  Cargo.toml  LICENSE  README.md  main.py  requirements.in  requirements.txt
.github/workflows/: release.yml
bot/: logic.py
packaging/arch/: PKGBUILD  README.md  autolon.install  build-local-package.sh
packaging/aur/: README.md  publish-autolon-bin.sh  publish-autolon.sh
packaging/aur/autolon/: .SRCINFO  PKGBUILD
packaging/aur/autolon-bin/: .SRCINFO  PKGBUILD
packaging/linux/: 70-autolon-uinput.rules  autolon.service  autolon.sysusers  io.github.autolon.Autolon.desktop  io.github.autolon.Autolon.metainfo.xml
packaging/release/: build-binary-archive.sh
src/: cli.rs  clicker.rs  config.rs  desktop.rs  gui.rs  hotkeys.rs  indicator.rs  input.rs  ipc.rs  main.rs  tray.rs
